package com.suken27.humanfactorsjava.model;

import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.Id;
import jakarta.persistence.Lob;
import jakarta.persistence.ManyToOne;

/**
 * Flyweight class that registers the intrinsic state of an Action.
 * @see Action
 */
@Entity
public class ActionType {

    @Id
    private Long id;
    @Column(unique = true)
    private String title;
    @Lob
    private String description;
    @ManyToOne
    private BibliographicSource bibliographicSource;

    public ActionType() {
        super();
    }

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getTitle() {
        return title;
    }

    public void setTitle(String title) {
        this.title = title;
    }

    public String getDescription() {
        return description;
    }

    public void setDescription(String description) {
        this.description = description;
    }

    public BibliographicSource getBibliographicSource() {
        return bibliographicSource;
    }

    public void setBibliographicSource(BibliographicSource bibliographicSource) {
        this.bibliographicSource = bibliographicSource;
    }

    /**
     * Creates an instance of action with this type as intrinsic state.
     * @return Action (extrinsic state) with this object as intrinsic state.
     */
    public Action createInstance() {
        return new Action(this);
    }

    @Override
    public int hashCode() {
        final int prime = 31;
        int result = 1;
        result = prime * result + ((id == null) ? 0 : id.hashCode());
        result = prime * result + ((title == null) ? 0 : title.hashCode());
        result = prime * result + ((description == null) ? 0 : description.hashCode());
        return result;
    }

    @Override
    public boolean equals(Object obj) {
        if (this == obj)
            return true;
        if (obj == null)
            return false;
        if (getClass() != obj.getClass())
            return false;
        ActionType other = (ActionType) obj;
        if (id == null) {
            if (other.id != null)
                return false;
        } else if (!id.equals(other.id))
            return false;
        if (title == null) {
            if (other.title != null)
                return false;
        } else if (!title.equals(other.title))
            return false;
        if (description == null) {
            if (other.description != null)
                return false;
        } else if (!description.equals(other.description))
            return false;
        return true;
    }

    @Override
    public String toString() {
        return "ActionType [id=" + id + ", title=" + title + ", description=" + description + "]";
    }

}
